GloablServices/keshavglobal/force-app/main/default/objects/Account_Product_Service__c/Account_Product_Service__c.object-meta.xml
<CustomObject>
    <label>Account Product Service</label>
    <nameField>
        <label>Account Product Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Product Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>