GloablServices/keshavglobal/force-app/main/default/objects/Account_Product_Service__c/fields/Account_Product__c.field-meta.xml
<CustomField>
    <fullName>Account_Product__c</fullName>
    <label>Account Product</label>
    <referenceTo>Account_Product__c</referenceTo>
    <relationshipLabel>Account Product Services</relationshipLabel>
    <relationshipName>Account_Product_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>