GloablServices/keshavglobal/force-app/main/default/objects/Account_Product_Service__c/fields/Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Service__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Service</label>
    <referenceTo>Product_Service__c</referenceTo>
    <relationshipLabel>Account Product Services</relationshipLabel>
    <relationshipName>Account_Product_Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>