GloablServices/keshavglobal/force-app/main/default/objects/Account_Product_Service__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <formula>IF(ISPICKVAL(Product_Service__r.Service__r.Leaf_Node__c, &apos;YES&apos;), 
 IF(ISBLANK(TEXT(Product_Service__r.Service__r.Service_Level_3_Type__c)) , TEXT(Product_Service__r.Service__r.Service_Level_2_Type__c ), TEXT(Product_Service__r.Service__r.Service_Level_3_Type__c)) , &apos;&apos;)</formula>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>