GloablServices/keshavglobal/force-app/main/default/objects/Account_Product_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Product__c</columns>
    <columns>ServiceType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>